# fun-euroleague-fantasy

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  config.yaml  mkdocs.yml  pyproject.toml
docs/: index.md
examples/: featureclass-1.py  featureclass-2.py
flow/: data_acquisition.py  feature_engineering.py  main.py  predictive_modeling.py  ranker.py  squad_optimization.py
src/elfantasy/: acquisition.py  config.py  features.py  functions.py  get_euroleague_data.py  get_player_data.py  get_team_data.py  modeling.py  optimization.py  process_data.py  utils.py
